# data_structure_sample

./: CMakeLists.txt  adt.c  adt.h  bucket_sample.c  bucket_sample.h  global.c  global.h  main.c  simple_list.c  simple_list.h  simple_queue.c  simple_queue.h  simple_stack.c  simple_stack.h  stack_eight_queens_iterator.c  stack_eight_queens_non_iterator.c  stack_eight_queens_non_iterator.h  stack_eight_queens_worse.c  stack_eight_queens_worse.h  stack_eight_quees_simple.c
eight_queens/: stack_eight_queens_iterator.c  stack_eight_queens_iterator.h  stack_eight_queens_non_iterator.c  stack_eight_queens_non_iterator.h  stack_eight_queens_worse.c  stack_eight_quees_simple.c  stack_eight_quees_simple.h
pool/: pool.c  pool.h
tree/: tree.c  tree.h
